check_output.txt
    Checking veloxx v0.3.2 (D:\Projects\Veloxx\veloxx)
warning: unused import: `std::collections::HashMap`
  --> src\advanced_io.rs:53:5
   |
53 | use std::collections::HashMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: use of moved value: `column_names`
   --> src\io\arrow.rs:137:17
    |
119 |     let column_names = dataframe.column_names();
    |         ------------ move occurs because `column_names` has type `Vec<&std::string::String>`, which does not implement the `Copy` trait
120 |     for name in column_names {
    |                 ------------ `column_names` moved due to this implicit call to `.into_iter()`
...
137 |     for name in column_names {
    |                 ^^^^^^^^^^^^ value used here after move
    |
note: `std::iter::IntoIterator::into_iter` takes ownership of the receiver `self`, which moves `column_names`
   --> /rustc/f8297e351a40c1439a467bbbb6879088047f50b3\library\core\src\iter\traits\collect.rs:310:18
help: consider iterating over a slice of the `Vec<&std::string::String>`'s content to avoid moving into the `for` loop
    |
120 |     for name in &column_names {
    |                 +

For more information about this error, try `rustc --explain E0382`.
warning: `veloxx` (lib) generated 1 warning
error: could not compile `veloxx` (lib) due to 1 previous error; 1 warning emitted
